--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.MiniProject"
         tools:targetApi="31">
         <activity
+            android:name=".LiveDataActivity"
+            android:exported="false"
+            android:label="@string/title_activity_live_data"
+            android:theme="@style/Theme.MiniProject" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register"
